Fixed cut off arm on 1080p screen

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -4,7 +4,7 @@
     position: relative;
 
     .about-content {
-        width: 50%;
+        width: 60%;
         margin: 0 auto;
         position: relative;
 
